# MIRA

./: .gitignore  Cargo.toml  README.md
docs/mira_status/: mira_status_19_05.md
mira-frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tasks.md  tsconfig.json  vitest.config.ts
mira-frontend/src/: data-loader.ts  main.ts  metadata.ts  parser.ts  store.ts  style.css  types.ts  vite-env.d.ts
mira-frontend/tables/: DTB-034-BL-T-RNA_AR.novel.tsv  DTB-034-BL-T-RNA_AR.summary.tsv  DTB-034-BL-T-RNA_AR.tsv  DTB-094-BL-T-RNA_AR.novel.tsv  DTB-094-BL-T-RNA_AR.summary.tsv  DTB-094-BL-T-RNA_AR.tsv  DTB-097-Pro-T-RNA_AR.novel.tsv  DTB-097-Pro-T-RNA_AR.summary.tsv  DTB-097-Pro-T-RNA_AR.tsv  DTB-098-Pro2-T-RNA_AR.novel.tsv  DTB-098-Pro2-T-RNA_AR.summary.tsv  DTB-098-Pro2-T-RNA_AR.tsv  DTB-104-BL-T-RNA_AR.novel.tsv  DTB-104-BL-T-RNA_AR.summary.tsv  DTB-104-BL-T-RNA_AR.tsv  DTB-141-BL-T-RNA_AR.novel.tsv  DTB-141-BL-T-RNA_AR.summary.tsv  DTB-141-BL-T-RNA_AR.tsv  DTB-183-BL-T-RNA_AR.novel.tsv  DTB-183-BL-T-RNA_AR.summary.tsv  DTB-183-BL-T-RNA_AR.tsv  DTB-187-BL-T-RNA_AR.novel.tsv  DTB-187-BL-T-RNA_AR.summary.tsv  DTB-187-BL-T-RNA_AR.tsv  DTB-213-BL-T-RNA_AR.novel.tsv  DTB-213-BL-T-RNA_AR.summary.tsv  DTB-213-BL-T-RNA_AR.tsv  DTB-234-BL-T-RNA_AR.novel.tsv  DTB-234-BL-T-RNA_AR.summary.tsv  DTB-234-BL-T-RNA_AR.tsv  TCGA-EJ-7314-01A-31R-2118-07_AR.novel.tsv  TCGA-EJ-7314-01A-31R-2118-07_AR.summary.tsv  TCGA-EJ-7314-01A-31R-2118-07_AR.tsv  (+27 more)
src/: aligner.rs  caller.rs  cli.rs  index.rs  main.rs  output.rs  scanner.rs  types.rs
tests/: integration_test.rs
(+15 files in other folders)
