[package]
name = "mira"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mira"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
needletail = "0.5"
rayon = "1"
bio = "2"
ahash = "0.8"
anyhow = "1"
flate2 = "1"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
tempfile = "3.27.0"
